<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/mainInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_select_instructions"
            android:textAlignment="center"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/currentSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/currentSportIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/linearLayout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/levelOneBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_one"
                android:padding="50sp"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                android:textColor="@color/easy"
                android:textSize="30sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/levelTwoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_two"
                android:padding="50sp"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textColor="@color/medium"
                android:textSize="30sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/levelThreeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_three"
                android:padding="50sp"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard"
                android:textColor="@color/hard"
                android:textSize="30sp"/>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/back_from_instructions"
        android:padding="25sp"
        android:textSize="30sp"/>


</RelativeLayout>