<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/administratorMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/administrator_mode"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"/>


    <TextView
        android:id="@+id/adminHelp"
        android:layout_width="450dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/administratorMode"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/admin_help" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@+id/adminHelp"
        android:gravity="center"
        android:id="@+id/linearLayout3">
        <Button
            android:id="@+id/reconnectBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:text="@string/reconnect"
            android:textSize="15sp"
            android:padding="10sp"
            android:layout_margin="10dp"
            android:enabled="false"/>
        <android.support.v7.widget.CardView
            android:id="@+id/view2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:elevation="12dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="20dp"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/crosstick"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:tint="@color/colorAccent"
                android:src="@drawable/asl_pathmorph_crosstick" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="@string/admin_to_student"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"/>
    <Switch
        android:id="@+id/demoToggleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:switchPadding="10dp"
        android:padding="20dp"
        android:text="@string/demo_mode"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />
</RelativeLayout>
