<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/mainInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:textAlignment="center"
        android:text="@string/main_instructions" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="70dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageButton
            android:id="@+id/basketballButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/basketball_icon"/>
        <TextView
            android:id="@+id/basketballLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basketball"
            android:textAlignment="center"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
    android:layout_marginBottom="40dp"
    android:layout_marginEnd="70dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <ImageButton
        android:id="@+id/soccerButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/soccer_icon"/>
    <TextView
        android:id="@+id/soccerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soccer"
        android:textAlignment="center"
        android:textSize="20sp"/>
</LinearLayout>


</RelativeLayout>
